@@ -312,7 +312,7 @@ public class DefaultXmlService extends XmlService {
                         Iterator<XmlNode> it =
                                 commonChildren.computeIfAbsent(name, n1 -> Stream.of(dominant.children().stream()
                                                 .filter(n2 -> n2.name().equals(n1))
-                                                .collect(Collectors.toList()))
+                                                .toList())
                                         .filter(l -> !l.isEmpty())
                                         .map(List::iterator)
                                         .findFirst()
